[tool.poetry]
name = "autoencode-tutorial"
version = "0.1.0"
description = ""
authors = ["Maharshi-Pathak <64644720+Maharshi-Pathak@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.29.4"
pandas = "^2.2.2"
torch = "^2.3.0"
torchvision = "^0.18.0"
jupyterlab = "^4.1.6"
jupyter = "^1.0.0"
notebook = "^7.1.3"
matplotlib = "^3.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
